deployments/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microshop-ingress
  namespace: microshop
spec:
  ingressClassName: nginx
  rules:
  - host: microshop.local
    http:
      paths:
      - path: /api
        pathType: Prefix          
        backend:
          service:
            name: api-gateway
            port:
              number: 8000
      - path: /
        pathType: Prefix      
        backend:
          service:
            name: frontend-react
            port:
              number: 80
